# nous

./: .env.example  .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  api.py  app.py  demo.py  lakefile.lean  pyproject.toml  requirements-lock.txt  requirements.txt  start.sh
.githooks/: pre-commit
.github/workflows/: eval.yml  test.yml
closureguard/: __init__.py  baseline.py  checker.py  closure.py  coherence.py  detector.py  extractor.py  scorer.py
docs/: RESEARCH_NOTES.md
eval/: compare_baselines.py  run_baseline.py  run_eval.py  run_large_scale.py  test_failures.py
eval/datasets/: README.md  closure_tasks.json
eval/datasets/loaders/: swebench.py
eval/results/: README.md  baseline_20260323_230835.json  baseline_20260325_122818.json  large_scale_20260414_112020.json  large_scale_20260414_112020.md  run_20260325_121634.json
examples/: investment_advisor.py  pnp_proof_attempt.py  scientific_usage.py  self_audit_demo.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: AnalysisView.tsx  GraphPanel.tsx  HomeScreen.tsx  SchoolsPanel.tsx  StepPanel.tsx  StreamingView.tsx
nous/: __init__.py  baseline.py  closure.py  coherence.py  decidable.py  detector.py  entailment.py  exhaust.py  extractor.py  graph.py  live.py  query.py  schools.py  scorer.py  splitter.py  trace.py  verifier.py  viz.py
nous/integrations/: __init__.py  generic.py  langchain.py
nous/providers/: __init__.py  anthropic_provider.py  gemini_provider.py  openai_provider.py
paper/: README.md  main.tex  outline.md  references.bib
scripts/: reproduce_table1.sh
tests/: test_closure_pipeline.py  test_detector.py  test_new_features.py  test_nous.py
theory/: ClosureViolation.lean  Decidable.lean  Examples.lean  README.md
